--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -17,51 +17,85 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="400dp"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_margin="2dp"
-                android:src="@mipmap/ic_launcher"
+                android:scaleType="fitXY"
+                android:src="@drawable/backgroudn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_cover"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tap to upload a cover"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/image"
+                app:layout_constraintEnd_toEndOf="@+id/image"
+                app:layout_constraintStart_toStartOf="@+id/image"
+                app:layout_constraintTop_toTopOf="@+id/image" />
 
             <EditText
                 android:id="@+id/etTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Title"
+                android:hint="Course title..."
+                android:background="@drawable/et_bg"
+                android:layout_margin="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/image"
                 tools:layout_editor_absoluteX="16dp" />
-
-            <EditText
-                android:id="@+id/etPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Price"
-                app:layout_constraintTop_toBottomOf="@+id/etDescription"
-                tools:layout_editor_absoluteX="-16dp" />
 
             <EditText
                 android:id="@+id/etDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Description"
+                android:hint="Description..."
+                android:background="@drawable/et_bg"
+                android:layout_margin="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/etTitle"
                 tools:layout_editor_absoluteX="-5dp" />
 
+            <EditText
+                android:id="@+id/etPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="$20.99"
+                android:background="@drawable/et_bg"
+                android:layout_margin="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/etDescription"
+                tools:layout_editor_absoluteX="-16dp" />
+
             <Button
                 android:id="@+id/btn_pick_video"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="144dp"
-                android:text="Pick Video"
+                android:layout_marginTop="24dp"
+                android:text="Add video"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:background="@drawable/button_bg"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rv_videos_upload" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:layout_margin="10dp"
                 android:id="@+id/rv_videos_upload"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@+id/btnUpload"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etPrice"
@@ -69,11 +103,16 @@
 
             <Button
                 android:id="@+id/btnUpload"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="124dp"
                 android:layout_marginTop="24dp"
                 android:text="Upload Course"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:background="@drawable/button_bg"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_pick_video" />
 
