--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".VideoActivity">
 
     <com.google.android.exoplayer2.ui.PlayerView
@@ -22,6 +23,9 @@
     <ProgressBar
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="#373737"
         android:id="@+id/progress_bar"
         android:layout_centerInParent="true"/>
 
