--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#621a8a</color>
-    <color name="purple_500">#5a26a5</color>
-    <color name="purple_700">#221a65</color>
+    <color name="purple_200">#373737</color>
+    <color name="purple_500">#373737</color>
+    <color name="purple_700">#373737</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
