--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:text="#hashtag"
-        android:padding="10dp"
+        android:layout_margin="10dp"
         android:id="@+id/tv_hashtag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_parent"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
