--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -36,7 +36,7 @@
             android:text="Course Title"
             android:layout_marginTop="210dp"
             android:layout_marginStart="10dp"
-            android:textColor="@color/design_default_color_primary_dark"
+            android:textColor="@color/purple_200"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +49,7 @@
             android:layout_marginStart="10dp"
             android:maxLines="1"
             android:text="Full Name"
-            android:textColor="@color/design_default_color_primary_dark"
+            android:textColor="@color/purple_200"
             android:textStyle="italic" />
 
         <ImageButton
