--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -20,6 +20,7 @@
         android:id="@+id/image_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:background="#10000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
