--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -31,7 +31,6 @@
                 android:layout_height="wrap_content"
                 android:text="Tap to upload a cover"
                 android:textColor="@color/white"
-                android:textStyle="bold"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="@+id/image"
                 app:layout_constraintEnd_toEndOf="@+id/image"
@@ -68,14 +67,23 @@
                 android:id="@+id/etPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="$20.99"
-                android:background="@drawable/et_bg"
                 android:layout_margin="10dp"
+                android:background="@drawable/et_bg"
+                android:hint="$20.99"
                 android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/etDescription"
                 tools:layout_editor_absoluteX="-16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Videos to upload:"
+                app:layout_constraintBottom_toTopOf="@+id/rv_videos_upload"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etPrice" />
 
             <Button
                 android:id="@+id/btn_pick_video"
@@ -85,17 +93,17 @@
                 android:layout_marginTop="24dp"
                 android:text="Add video"
                 android:textSize="16dp"
-                android:textStyle="bold"
                 android:background="@drawable/button_bg"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rv_videos_upload" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_margin="10dp"
                 android:id="@+id/rv_videos_upload"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/top_shadow_gradient"
                 app:layout_constraintBottom_toTopOf="@+id/btnUpload"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etPrice"
@@ -109,7 +117,6 @@
                 android:layout_marginTop="24dp"
                 android:text="Upload Course"
                 android:textSize="16dp"
-                android:textStyle="bold"
                 android:background="@drawable/button_bg"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
