--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -38,9 +38,8 @@
                     android:layout_height="250dp"
                     android:layout_gravity="center_horizontal"
                     android:scaleType="fitXY"
-                    android:src="@drawable/icon"
+                    android:src="@drawable/backgroudn"
                     android:clickable="true"
-
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -141,6 +140,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/btn_buy" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/bottom_constraint_layout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:elevation="-10dp"
