--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -24,7 +24,7 @@
             android:layout_height="200dp"
             android:layout_gravity="center|top"
             android:scaleType="fitXY"
-            android:src="@color/browser_actions_bg_grey"
+            android:src="@drawable/backgroudn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
