--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -26,7 +26,7 @@
         android:id="@+id/image_profile"
         android:layout_width="140dp"
         android:layout_height="108dp"
-        android:src="@drawable/icon"
+        android:src="@drawable/backgroudn"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:text="Full Name"
         android:textSize="20dp"
-        android:textStyle="bold"
+        android:textStyle="italic"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
