--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -5,13 +5,14 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:text="#hashtag"
-        android:layout_margin="10dp"
         android:id="@+id/tv_hashtag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:text="#hashtag"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_parent"
