--- a/app/src/main/res/layout/video_upload_item.xml
+++ b/app/src/main/res/layout/video_upload_item.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:layout_marginTop="10dp">
 
     <VideoView
         android:id="@+id/video_upload_view"
         android:layout_width="410dp"
         android:layout_height="198dp"
+        android:background="#10000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
