--- a/app/src/main/res/layout/fragment_login_tab.xml
+++ b/app/src/main/res/layout/fragment_login_tab.xml
@@ -26,6 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/et_bg"
+        android:inputType="textPassword"
         android:hint="Password"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -53,19 +54,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_login_password"
         app:layout_constraintWidth_percent=".8" />
-
-    <TextView
-        android:id="@+id/tv_login_notmemeber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintVertical_bias="0"
-        android:text="New to Memorizor? Register"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
