--- a/app/src/main/res/layout/fragment_register_tab.xml
+++ b/app/src/main/res/layout/fragment_register_tab.xml
@@ -44,6 +44,7 @@
         android:id="@+id/et_register_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:hint="Password"
         android:paddingLeft="20dp"
         android:background="@drawable/et_bg"
@@ -58,7 +59,6 @@
         app:layout_constraintVertical_bias="0"
         app:layout_constraintWidth_percent=".8" />
 
-
     <Button
         android:id="@+id/btn_register_signup"
         android:layout_width="0dp"
@@ -72,19 +72,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_register_password"
         app:layout_constraintWidth_percent=".8" />
-
-    <TextView
-        android:id="@+id/tv_register_member"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintVertical_bias="0"
-        android:text="Already a member? Log in"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_register_signup" />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
