--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -63,7 +63,7 @@
             />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/rating_bar_preview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="250dp"
@@ -77,6 +77,14 @@
             android:transformPivotY="0dp"
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toBottomOf="@+id/title" />
+
+        <TextView
+            android:id="@+id/tv_ratings_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="135dp"
+            android:layout_marginTop="251dp"
+            android:text="(0 ratings)" />
 
         <TextView
             android:id="@+id/price"
