--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +8,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -88,15 +88,17 @@
             <Button
                 android:id="@+id/btn_pick_video"
                 android:layout_width="0dp"
-                app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/button_bg"
                 android:text="Add video"
                 android:textSize="16dp"
-                android:background="@drawable/button_bg"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_videos_upload" />
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintTop_toBottomOf="@+id/rv_videos_upload"
+                app:layout_constraintWidth_percent=".8" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_videos_upload"
@@ -104,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/top_shadow_gradient"
-                app:layout_constraintBottom_toTopOf="@+id/btnUpload"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etPrice"
                 app:layout_constraintVertical_bias="0.0" />
@@ -114,9 +116,9 @@
                 android:layout_width="0dp"
                 app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:text="Upload Course"
                 android:textSize="16dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/button_bg"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
