--- a/app/src/main/res/layout/video_upload_item.xml
+++ b/app/src/main/res/layout/video_upload_item.xml
@@ -5,11 +5,21 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp">
 
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="#10000000"
+        app:layout_constraintBottom_toBottomOf="@+id/video_upload_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <VideoView
         android:id="@+id/video_upload_view"
         android:layout_width="410dp"
         android:layout_height="198dp"
-        android:background="#10000000"
+        android:elevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
